--- a/style/index.css
+++ b/style/index.css
@@ -9,9 +9,10 @@ body {
     color: #313639;
 }
 
-.text-emphasis{
-    color:#fcb934;
+.text-emphasis {
+    color: #fcb934;
 }
+
 .card {
     width: 400px;
     margin: 1%;
@@ -26,10 +27,25 @@ body {
     background-color: #fcb934;
 }
 
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+    align-items: flex-start;
+}
+
 .card-footer-content {
     padding-left: 2%;
     padding-bottom: 3px;
     display: flex;
+    justify-content: space-around;
+}
+
+.link-out {
+    color: #0000b5;
+    text-decoration: none;
 }
 
 .card-footer {
@@ -50,27 +66,29 @@ body {
     padding: 4px;
     font-size: 20px;
 }
-  
-.card-text{
+
+.card-text {
     padding: 3%;
-    padding-top:0%;
+    padding-top: 0%;
 }
-.card-tags{
-    padding-top:1%;
+
+.card-tags {
+    padding-top: 1%;
 }
-  .tags {
+
+.tags {
     list-style: none;
     margin: 0;
-    overflow: hidden; 
+    overflow: hidden;
     padding: 0;
-  }
-  
-  .tags li {
-    
-    align-items: center; 
-  }
-  
-  .tags li {
+}
+
+.tags li {
+
+    align-items: center;
+}
+
+.tags li {
     background: #eee;
     border-radius: 3px;
     color: #999;
@@ -81,9 +99,9 @@ body {
     /* position: relative; */
     margin: 0 10px 10px 0;
     text-decoration: none;
-  }
-  
-  
+}
+
+
 
 nav {
     padding: 10px;
@@ -136,67 +154,87 @@ nav ul li a:hover::after {
     color: white;
 }
 
-.headline{
+.headline {
     text-align: center;
 }
+
 .header {
-    color: #424242 ;
+    color: #424242;
     font-weight: 500;
     font-size: 25px;
 }
 
 .title {
-    color: #ffffff ;
+    color: #ffffff;
     font-weight: 500;
     font-size: 25px;
 }
 
-  .typewriter h1 {
-      color: white;
-      font-size: 40px;
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid #fcb934; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
-    animation: 
-      typing 3.5s steps(40, end),
-      blink-caret .75s step-end infinite;
-  }
-  
-  /* The typing effect */
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: #fcb934; }
-  }
+.typewriter h1 {
+    color: white;
+    font-size: 40px;
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid #fcb934;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Keeps the content on a single line */
+    margin: 0 auto;
+    /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em;
+    /* Adjust as needed */
+    animation:
+        typing 3.5s steps(40, end),
+        blink-caret .75s step-end infinite;
+}
 
-  @media only screen and (max-width: 900px) {
-.typewriter h1{
-    font-size: 30px;
-}  
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0
+    }
+
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+
+    from,
+    to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: #fcb934;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .typewriter h1 {
+        font-size: 30px;
+    }
 }
 
 
 @media only screen and (max-width: 700px) {
-.typewriter h1{
-    font-size: 25px;
-}  
+    .typewriter h1 {
+        font-size: 25px;
+    }
 
-nav{
-    display: none;
+    nav {
+        display: none;
+    }
+
+    .nav-footer {
+        display: none;
+    }
 }
-.nav-footer{
-    display: none;
-}
-}
+
 @media only screen and (max-width: 500px) {
-    .typewriter h1{
+    .typewriter h1 {
         font-size: 75%;
-    }  
+    }
 }
