--- a/style/index.css
+++ b/style/index.css
@@ -27,11 +27,30 @@ body {
     background-color: #fcb934;
 }
 
+.margin-center{
+    margin: 0 auto;
+
+}
+
+.text-center{
+    text-align: center;
+}
+
+.subtitle{
+    line-height: 60px;
+}
+
+.underline{
+    border-color: #fcb934;
+    border-width: 0px 0px 1px 0px; 
+    border-style: solid;
+}
+
 .flex-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-content: space-around;
     align-items: flex-start;
 }
@@ -84,7 +103,6 @@ body {
 }
 
 .tags li {
-
     align-items: center;
 }
 
@@ -156,6 +174,7 @@ nav ul li a:hover::after {
 
 .headline {
     text-align: center;
+    line-height:50px;
 }
 
 .header {
